app/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudblitz-api-ingress
  namespace: cloudblitz
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-name: cloudblitz-api-alb
    alb.ingress.kubernetes.io/healthcheck-path: /api/auth/health
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '30'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '3'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-1:476114134361:certificate/877c3541-8724-436f-9c5d-c517f232bf24 #eu-west-1
spec:
  rules:
  - host: api.riyashrirame.online
    http:
      paths:
      - path: /api/auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 8081
      - path: /api/courses
        pathType: Prefix
        backend:
          service:
            name: course-service
            port:
              number: 8082
      - path: /api/enroll
        pathType: Prefix
        backend:
          service:
            name: enrollment-service
            port:
              number: 8083
